fix(tool): add compatibility with the old installation method

--- a/LouvorHelper/LouvorHelper.csproj
+++ b/LouvorHelper/LouvorHelper.csproj
@@ -8,6 +8,8 @@
         <Version>2.1.0</Version>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>lyric</ToolCommandName>
+        <AssemblyName>lyric</AssemblyName>
+        <TargetName>lyric</TargetName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
     </PropertyGroup>
 
